# PhoneBook-PlusPlus

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  array.h  contact.cpp  contact.h  contacts.cpp  contacts.h  main.cpp  main_test.cpp  menu.cpp  menu.h  rec.py  string.cpp  string.h
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
docs/specification/: main.tex  specification.tex
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/phonebook/: CMakeLists.txt  array.h  contact.cpp  contact.h  contacts.cpp  contacts.h  string.cpp  string.h
